--- a/src/ChãoDeVidro/styles.css
+++ b/src/ChãoDeVidro/styles.css
@@ -19,7 +19,7 @@ body {
   
   /* Container with the background image */
   .container {
-    background: url('https://i.postimg.cc/7PWdPMzm/pexels-pavel-danilyuk-8111311.jpg') no-repeat center center/cover;
+    background: url('https://i.postimg.cc/bwDzNwd2/chaodevidro.webp') no-repeat center center/cover;
     min-height: 100vh;
     display: flex;
     justify-content: center;
