--- a/src/ForçaOuQueda/styles.css
+++ b/src/ForçaOuQueda/styles.css
@@ -5,6 +5,10 @@ html, body {
     font-family: "Gabarito", sans-serif;
     margin: 20px;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
   
 .logo {
@@ -28,6 +32,9 @@ html, body {
   box-shadow: 0 0 5px #ff1b7b;
   padding: 20px;
   border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .conteudo-jogo:hover {
@@ -38,12 +45,14 @@ html, body {
 h2,
   p {
   color: white;
+  font-size: 16px;
 }
   
 button {
-  padding: 10px 20px;
+  padding: 20px 20px;
   margin: 10px;
   border: none;
+  border-radius: 20px;
   background: #ff1b7b;
   color: white;
   cursor: pointer;
@@ -57,12 +66,12 @@ button:hover {
 #container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center;  
 }
   
 
 #container input {          
-  width: 30%;              
+  width: 80%;              
   margin: 10px auto;         
   padding: 10px;
   font-size: 16px;
